# skill-transfer

./: pyproject.toml
SkillTransfer/: __main__.py
SkillTransfer/FileIO/: FileIO.py
SkillTransfer/Filter/: Filter.py
SkillTransfer/Gripper/: Gripper.py  UDP.py
SkillTransfer/OptiTrack/: OptiTrackStreaming.py
SkillTransfer/Participant/: ParticipantMotion.py
SkillTransfer/Processor/: Processor.py
SkillTransfer/Recorder/: DataRecord.py
SkillTransfer/Robot/: CAMotion.py  xArmTransform.py
SkillTransfer/RobotArmController/: RobotControlManager.py
SkillTransfer/xarm/core/comm/: socket_port.py
SkillTransfer/xarm/core/wrapper/: uxbus_cmd.py
SkillTransfer/xarm/wrapper/: xarm_api.py
SkillTransfer/xarm/x3/: base.py  xarm.py
config/: settings.csv
