[tool.poetry]
name = "skill-transfer"
version = "0.1.0"
description = ""
authors = ["Haptics-Lab <nitech.hapticslab@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
colorama = "^0.4.6"
contourpy = "^1.2.1"
cycler = "^0.12.1"
fonttools = "^4.51.0"
future = "^1.0.0"
iso8601 = "^2.1.0"
kiwisolver = "^1.4.5"
matplotlib = "^3.8.4"
numpy-quaternion = "^2023.0.3"
packaging = "^24.0"
pillow = "^10.3.0"
pip = "^24.0"
pyaudio = "^0.2.14"
pynput = "^1.7.7"
pyparsing = "^3.1.2"
pyserial = "^3.5"
python-dateutil = "^2.9.0.post0"
pyyaml = "^6.0.1"
scikit-surgerycore = "^0.7.2"
scipy = "^1.13.0"
setuptools = "^69.5.1"
six = "^1.16.0"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
